trying to fix scrolling behaviour and weird button colors on iphone

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,17 +4,4 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "button";
-
-//sing in and login
-.button-yellow-init {
-  text-decoration: none;
-  background-color: #FFD76B;
-  color: black;
-  padding: 7px 12px; /* Adjust padding to control the capsule size */
-  border-radius: 15px;
-  font-size: 25px;
-  display: inline-block; /* Makes the button only as wide as its content + padding */
-  border: none; /* Assuming you don't want a border, but adjust as needed */
-  margin-top: 10px;
-  margin-bottom: 30px;
-}
+@import "iphone";
